fix: heading filter on small screen

--- a/css/queries.css
+++ b/css/queries.css
@@ -103,6 +103,12 @@
 	}
 }
 
+@media only screen and (max-width: 768px) {
+	.filter__heading {
+		flex: 100%;
+	}
+}
+
 /* ----------------------------------------- */
 /* ---------------- HOSTING ---------------- */
 /* ----------------------------------------- */
